# conduit

./: .gitignore  CMakeLists-c-original.txt  CMakeLists-cpp-build.txt  CMakeLists-cpp.txt  CMakeLists.txt  README-cpp.md  README.md  build-cpp.sh  conduit-cpp.pc.in  conduit.pc.in  copilot-instructions.md  install-c.sh  install-cpp.sh  install.sh  test_c_install  test_c_install.c  test_cpp_install.cpp
cmake/: conduit-config.cmake.in  conduit-cpp-config.cmake.in
examples/: json_example.cpp  simple_example.cpp  simple_get.c  simple_post.c
include/: conduit.h  conduit.hpp  conduit_c_compat.h  failures.h  http_client.h  json_parser.h
src/: conduit.c  conduit.cpp  conduit_c_compat.cpp  failures.c  http_client.c  json_parser.c  json_parser.cpp
tests/: CMakeLists.txt  test_basic.cpp
